--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -2,7 +2,7 @@ name: Fetch Supervisor Version
 
 on:
   schedule:
-    - cron: '*/1 * * * *' # 每五分钟运行一次
+    - cron: '*/2 * * * *' # 每五分钟运行一次
   workflow_dispatch: # 允许手动触发
 
 jobs:
@@ -12,6 +12,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20' # 使用最新的 Node.js 20 版本
 
     - name: Install jq
       run: sudo apt-get update && sudo apt-get install -y jq
